# Full-Stack-Engineering-Challenge

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  conversions.py  exchange_rates.py  health.py  transactions.py  transfers.py  wallets.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/domain/: rules.py
backend/app/domain/entities/: __init__.py
backend/app/domain/value_objects/: money.py
backend/app/integrations/: redis_client.py
backend/app/integrations/exchange/: base.py  frankfurter.py
backend/app/middleware/: logging_middleware.py  request_id.py
backend/app/models/: __init__.py  base.py  exchange_rate.py  transaction.py  transfer.py  user.py  wallet.py
backend/app/repositories/: __init__.py
backend/app/schemas/: auth.py  common.py  conversion.py  exchange_rate.py  transaction.py  transfer.py  wallet.py
backend/app/services/: auth_service.py  conversion_service.py  exchange_service.py  transaction_service.py  transfer_service.py  wallet_service.py
backend/app/workers/: rate_refresh_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flows.py  test_transfers.py
backend/tests/unit/: test_exchange_service.py  test_transfer_service.py  test_wallet_service.py
(+23 files in other folders)
